workloads/mysql-shared/overlays/eks/primary-service-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: shared-mysql-primary
spec:
  type: ExternalName
  externalName: moco-shared-mysql-primary.backend.svc.cluster.local
